[gd_scene load_steps=5 format=2]

[ext_resource path="res://MeleeWeapon.gd" type="Script" id=1]
[ext_resource path="res://assets/art/weapons/sword.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 10 )

[sub_resource type="Animation" id=2]
resource_name = "swing"
length = 0.15
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 4 ), Vector2( 0, -8 ), Vector2( 0, 0 ) ]
}

[node name="MeleeWeapon" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
position = Vector2( 0, -10 )
texture = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/swing = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_MeleeWeapon_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_MeleeWeapon_body_exited"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
